Updating the project